--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@ Corporate Gifting					</p>
 <strong>Phone:</strong><a href="tel:9892722393">9892722393</a>, <a href="tel:02226608045"> 02226608045</a>
 </div>
 <div class="contact-row">
-<strong>Email:</strong> <a href="mailto:varun@kreativeenterprises.co.in">varun@kreativeenterprises.co.in</a>
+<strong>Email:</strong> <a href="mailto:varun@kreativeenterprises.com">varun@kreativeenterprises.com</a>
 </div>
 <div>
 <strong>Address</strong> &#8211; 001 Ground Floor, Moti Villa, Azad Road, Vile Parle East, Mumbai 400057</div>						</div>
