--- a/index.html
+++ b/index.html
@@ -278,8 +278,7 @@ var booked_wc_variables = {"prefix":"booked_wc_","ajaxurl":"https:\/\/narendra-k
           <div class="swiper-container">
             <div class="swiper-wrapper">
                     <div class="item swiper-slide item-banner banner-item-620cb6c88e43d elementor-repeater-item-a5b3540 tal with-shadow inherit">
-        <div class="bg-image" style="background-image: url(![Arzu Magnetic PW](https://user-images.githubusercontent.com/75464307/156502653-27246540-1ab7-4c52-8ff2-138923b4c352.jpg)
-)"></div>
+        <div class="bg-image" style="background-image: url(https://user-images.githubusercontent.com/75464307/156502653-27246540-1ab7-4c52-8ff2-138923b4c352.jpg)"></div>
                   
     <div class="bg-overlay">
           </div>
